team logos + names rendering. added light styling to the page for structure

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.logo {
+  height: 200px;
+  width: 200px;
+  padding: 20px;
+}
+
+.team-name {
+  font-weight: bolder;
+  font-size: large;
+}
+
+.teams-container {
+  padding: 4em;
+}
